# agara-sdks

./: .gitignore  README.md
python/: LICENSE  MARKET_MAKERS.md  README.md  pyproject.toml
python/agara_sdk/: __init__.py  aio.py  signing.py  streaming.py
python/examples/: bot.py  pat_smoke_test.py  subscribe.py  trading.py
python/tests/: test_aio.py  test_client.py  test_signing.py  test_streaming.py
